Fix overlapping radio buttons on mobile
Summary:
The span which held the text of radio buttons wasn't styled
correctly, so it would sometimes overlap with the circle bit. This fixes
that.

Test Plan:
 - Load an exercise with lots of text in one of the multiple choice
   choices.
   - See that the text wraps correctly.

Reviewers: aria

Reviewed By: aria

Differential Revision: https://phabricator.khanacademy.org/D15191

--- a/stylesheets/exercise-content-package/widgets/radio.less
+++ b/stylesheets/exercise-content-package/widgets/radio.less
@@ -134,6 +134,7 @@ body.mobile {
 
             .perseus-radio-option-content {
                 margin-left: 40px;
+                display: inline-block;
             }
         }
 
